--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<title>ESP32 Web Server Uploader</title>
+<title>ESP Web Server Uploader</title>
 </head>
 <body>
     <div id="main">
@@ -16,8 +16,8 @@
         <input id="newhtmlfile" type="file" onchange="setFileName(this)">
         <button id="uploadhtml" type="button" onclick="upload(this)">Upload</button>
         <p><a href="/list.html">Listing /html folder</a></p>
-        <br /><br />
-        <span id="uploading"></span>
+        <br />
+        <span class="blink" id="uploading"></span>
     </div>
     <script src="/scripts.js "></script>
 	<script>get_ota_filename()</script>
