--- a/html/list.html
+++ b/html/list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/terminal.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<title>ESP32 Web Server Uploader</title>
+<title>ESP Web Server Uploader</title>
 </head>
 <body>
     <script src="/scripts.js "></script>
